<resources>
    <string name="app_name">Berita</string>
    <string name="isi">Berita Heboh Saat Ini 2018/07/10</string>
    <string name="isi_berita_1">Begini Orang Sukses Habiskan Waktu Libur 2018/08/12</string>
    <string name="isi_berita_2">The Jakmania Tagih Janji Stadion BMW ke Pemprov DKI 2018/10/08</string>
    <string name="isi_berita_3">Jaga Adik Sambil Sekolah, Perjuangan Bocah Ini Bikin Warganet Terharu 2018/10/09</string>
    <string name="klik_berita_1">Baca Selengkapnya</string>
    <string name="klik_berita_2">Baca Selengkapnya</string>
    <string name="klik_berita_3">Baca Selengkapnya</string>
    <string name="para_isi_berita_1">"Saat tidak bekerja dan libur, orang-orang produktif selalu tahu bagaimana menghabiskan waktunya secara bijak dan benar. Orang produktif dan sukses pun tahu kapan seharusnya bekerja dan sebaiknya untuk rileks.  Dengan senantiasa terlatih produktif, Anda dapat memaksimal waktu yang dipunya dengan baik. Tak hanya itu, sisi kreativitas Anda pun dapat ditingkatkan pada hari libur dengan mengasah hobi di waktu senggang.  Melansir dari CNBC, Jumat (1/6/2018) ciri-ciri orang produktif yakni terbiasa menjadwalkan agenda atau rutinitas mereka dalam beberapa waktu ke depan. Apa saja kemudian yang dilakukan orang-orang produktif saat libur? "</string>
    <string name="para_isi_berita_2">Jakarta - The Jakmania kembali mengingatkan pemerintah provinsi DKI Jakarta atas janji pembangunan Stadion BMW. Hal itu diutarakan lewat bentangan spanduk.  Sandiaga Uno saat ini telah mundur sebagai Wakil Gubernur DKI Jakarta untuk maju sebagai calon wakil presiden 2019. Saat masa kampanye Pilkada DKI Jakarta pada 2017, dia berjanji untuk membangun Stadion BMW di Jakarta Utara untuk tim Persija Jakarta.  Stadion BMW dijanjikan bakal dibangun pada Oktober 2108, namun pada prosesnya belum juga tanda-tanda stadion bakal dibangun sampai saat ini</string>
    <string name="para_isi_berita_3">"Seorang guru bernama Leendya Putry membagikan kisah pilu yang dialami muridnya di sekolah. Demi menempuh bangku sekolah, seorang bocah SD di Kabupaten Sampang, Madura, Jawa Timur, harus membawa adiknya ke sekolah sambil belajar. Melihat keprihatinan itu, Leendya membagikan salah satu foto muridnya di jejaring sosial. \"Muridku ini selalu bawa adeknya ke sekolah. Alhamdulillah gak pernah rewel dalam kelas. Umur segini udah bisa manage kehidupan. Momong adeknya sambil mencari ilmu,\" tulis Leendya di akun Facebook-nya "</string>
</resources>
